--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Andrew Cheek, Horrible Cop</title>
+		<title>Andrew Cheek,</title>
 	</head>
 	<body>
 		<nav>
